fix: main overflow

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -19,7 +19,6 @@ body {
 
 main {
   flex-grow: 1;
-  overflow-x: hidden;
 }
 
 body {
